--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,27 @@
 server.port=9090
 
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-
-# temporary data storage
-#spring.datasource.url = jdbc:h2:file:C:/data/sample
-spring.datasource.url = jdbc:h2:file:D:\\documents\\users\\avitalze\\Downloads\\update\\auto-complete\\auto-complete\\src\\main\\resources\\data.sql
-
-# Enabling H2 Console
 spring.h2.console.enabled=true
+spring.datasource.platform=h2
+spring.datasource.url = jdbc:h2:mem:mydb
+#spring.datasource.url = jdbc:h2:file:/data/demo
 
-# Custom H2 Console URL
-spring.h2.console.path=/h2
+
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+## temporary data storage
+##spring.datasource.url = jdbc:h2:file:C:/data/sample
+#spring.datasource.url = jdbc:h2:file:D:\\documents\\users\\avitalze\\Downloads\\update\\auto-complete\\auto-complete\\src\\main\\resources\\data.sql
+
+## Enabling H2 Console
+#spring.h2.console.enabled=true
+#
+## Custom H2 Console URL
+#spring.h2.console.path=/h2
+
+
 
 #jdbc:h2:~/test;IGNORECASE=TRUE ---------- check for case sensative
